--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/bulma": "^1.2.1",
+    "@nuxtjs/dotenv": "^1.4.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {}
