--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/bulma": "^1.2.1",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/toast": "^3.3.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.19",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {}
