--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "random-advisor",
+  "name": "random-advicer",
   "version": "1.0.0",
   "description": "My neat Nuxt.js project",
   "author": "",
