--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "random-words": "^1.1.1"
   },
   "devDependencies": {}
 }
